--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -44,9 +44,42 @@ Most active interval is interval #`r most_active_interval`.
 ## Imputing missing values
 ```{r fill_missing_vals}
 number_of_NA = sum(is.na(activity$steps))
-# fill missing values with mean values of that interval 
+# fill missing values with mean values of that interval
+rows_with_NA = activity[is.na(activity$steps),]
+
+interval_to_mean_steps <- function(interval) {
+  idx <- which(activity.per_interval[,'interval'] == interval)
+  activity.per_interval[idx,]$steps
+}
+
+activity.imputing_steps = activity
+activity.imputing_steps[is.na(activity.imputing_steps$steps),]$steps = 
+  sapply(rows_with_NA$interval, interval_to_mean_steps)
+
+activity.imputing_steps.per_day = aggregate(steps ~ date, activity.imputing_steps, FUN = sum)
+activity.imputing_steps.per_day.mean = mean(activity.imputing_steps.per_day$steps)
+activity.imputing_steps.per_day.median = median(activity.imputing_steps.per_day$steps)
+qplot(activity.imputing_steps.per_day$steps, xlab = "Steps per day (with NA filling)")
 ```
+
 Total number of missing values is `r number_of_NA`.
+
+**Total number of steps taken per day (with NA filling)**  
+Mean: `r prettyNum(activity.imputing_steps.per_day.mean)`  
+Median: `r prettyNum(activity.imputing_steps.per_day.median)`
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
+```{r weekend_pattern}
+is.weekend <- function(day_name) {
+  if (day_name == "Saturday" || day_name == "Sunday")
+    "weekend"
+  else    
+    "weekday"
+}
+activity.imputing_steps$weekday <- factor(sapply(weekdays(activity.imputing_steps$date), is.weekend))
+activity.imputing_steps.per_interval = aggregate(steps ~ interval + weekday, activity.imputing_steps, FUN = mean)
+
+qplot(x = interval, y = steps, data = activity.imputing_steps.per_interval, geom = ("line")) + 
+  facet_grid(weekday ~ .)
+```
